--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.1.0",
-    "react-navigation": "^3.9.1"
+    "react-navigation": "^3.9.1",
+    "twitter": "^1.7.1",
+    "twitter-node-client": "0.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
